@@ -109,6 +109,10 @@ Interface
 
 :command:`show-title-bar = yes|no` - "no" allows hiding the title bar.
 
+:command:`show-server-address = yes|no` - "yes" shows the server
+address in the title bar.  This is disabled by default because most
+people use only one MPD instance.
+
 :command:`enable-mouse = yes|no` - Enable mouse support (if enabled at compile time).
 
 :command:`screen-list = SCREEN1 SCREEN2...` - A list of screens to
